fixed light and dark mode fonts

--- a/css/style.css
+++ b/css/style.css
@@ -234,6 +234,15 @@ aside a:hover {
   }
 }
 
+:root {
+  --primary-color: green;
+  --font-size: 15px;
+  --font-family: 'monospace', 'Helvetica Neue', Helvetica, sans-serif;
+}
+
+main{
+  font-family: var(--font-family);
+}
 
 
 
